# Architecture-and-backend-homework

./: README.md  app.py  countsapi.py  generatepayload.py  pyproject.toml
